# IoT

./: .gitignore  README.md  build_and_launch.sh  install_ros2_humble.sh
esp32ps5/: platformio.ini
esp32ps5/Controller/: Controller.ino
esp32ps5/src/: main.cpp
pyboard/: main.py
raspberry/: main.py
raspberry/robot_autonome_ws/src/brain/: package.xml  setup.py
raspberry/robot_autonome_ws/src/brain/brain/: brain.py
raspberry/robot_autonome_ws/src/launch/: robot.launch.py
raspberry/robot_autonome_ws/src/lidar_node/: package.xml  setup.py
raspberry/robot_autonome_ws/src/lidar_node/lidar_node/: lidar_node.py
raspberry/robot_autonome_ws/src/motor_controller/: package.xml  setup.py
raspberry/robot_autonome_ws/src/motor_controller/motor_controller/: motor_controller.py
raspberry/robot_autonome_ws/src/uart_reader/: package.xml  setup.py
raspberry/robot_autonome_ws/src/uart_reader/uart_reader/: uart_reader.py
