<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_node</name>
  <version>0.0.0</version>
  <description>ROS2 node for RPLIDAR integration</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rplidar</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
